# pihole-adlist-updater

./: Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pihole-adlist-updater.go  pihole-sync.go  sync.go
src/: adlists.rs  db.rs  main.rs
