[package]
name = "pihole-ad-sync"
version = "0.1.0"
authors = ["Bastien de Luca <dev@de-luca.io>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.5"
reqwest = "0.11.1"
rusqlite = "0.24.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.2.0", features = ["full"] }
